--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@ body {
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
-  margin:  5%;
+  margin-top:  15px;
+  margin-bottom: 5px;
   color: #FEF2BF;
 }
 
