--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ body {
   background-color: #011f3f;
 }
 
+.start{
+  background-color: #011f3f;
+
+}
+
 #level-title {
   font-family: "Press Start 2P", cursive;
   font-size: 1rem;
